theme/src/ui/playerbar.scss
/* ... */
.main-nowPlayingWidget-nowPlaying {
    margin-top: 13px;
    margin-left: -2px;
}


button[data-testid="cover-art-button"] {
    background: transparent;
    border-radius: 0;
    width: 34px;
    height: 34px;
}

.main-nowPlayingWidget-coverArt .cover-art {
    max-width: 33px;
    max-height: 33px;
    box-shadow: var(--album-shadow-small) !important;
}

.main-coverSlotCollapsed-navAltContainer {
    border-radius: 0;
}

.main-nowPlayingBar-left {
    display: flex;
    width: 42%;

    .likeControl-wrapper {
        margin-top: 16px;
    }
}

.main-nowPlayingBar-center {
    width: 500px;
}

div[data-testid='now-playing-widget'] {
    max-width: calc((100vw - 438px) / 2 - 60px);

    .likeControl-wrapper {
        margin-top: 0;

        span {
            height: 16px;
        }
    }
}

.main-nowPlayingBar-nowPlayingBar:has(.wmpotify-time-text[data-mode='2']) div[data-testid='now-playing-widget'] {
    max-width: calc((100vw - 438px) / 2 - 100px);
}

:root[data-wmpotify-style="xp"] {
    div[data-testid='now-playing-widget'] {
        max-width: calc((100vw - 498px) / 2 - 60px);
    }

    .main-nowPlayingBar-nowPlayingBar:has(.wmpotify-time-text[data-mode='2']) div[data-testid='now-playing-widget'] {
        max-width: calc((100vw - 498px) / 2 - 100px);
    }
}

.wmpotify-track-info {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    padding: 6px;
    font-size: 12px;
    margin-top: -3px;
    margin-left: -6px;
}

.main-nowPlayingWidget-trackInfo {
    margin-right: 0;

    > :not(.wmpotify-track-info) {
        display: none;
    }
}

.player-controls__buttons {
    position: relative;
    width: 404px;
    height: 49px;
    margin-top: 10px;
    margin-bottom: 0;
    gap: 0;

    &::before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background: var(--aero-bg-large) no-repeat;
        background-size: 100% 100%;
        z-index: -1;
    }

    button {
        cursor: default !important;
        min-height: 0;

        span {
            opacity: 0 !important;
        }

        &[data-testid='control-button-skip-back'] {
            order: 99;
            width: 52px;
            height: 25px;
            margin-right: -1px;
            border-radius: 0;
            background: var(--prev) no-repeat;
            align-self: center;
            transform: none !important;

            &:disabled {
                background-image: var(--prev-disabled) !important;
            }

            &:hover {
                background-image: var(--prev-hover);
            }

            &:active {
                background-image: var(--prev-pressed);
            }
        }

        &[data-testid='control-button-playpause'] {
            position: relative;
            width: 42px;
            height: 43px;
            border-radius: 0;
            align-self: center;
            background: var(--play) no-repeat;
            transform: none !important;

            &::before {
                content: '';
                position: absolute;
                top: -4px;
                left: -5px;
                width: 52px;
                height: 52px;
                background: url('resources/playerbar/play_glow.png') no-repeat;
                transition: opacity 0.3s;
                opacity: 0;
            }

            &:disabled {
                background-image: var(--play-disabled) !important;
            }

            &:hover {
                background-image: var(--play-hover);
                &::before {
                    opacity: 1;
                }
            }

            &:active {
                background-image: var(--play-pressed);
            }

            &:has(path[d="M2.7 1a.7.7 0 0 0-.7.7v12.6a.7.7 0 0 0 .7.7h2.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7H2.7zm8 0a.7.7 0 0 0-.7.7v12.6a.7.7 0 0 0 .7.7h2.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-2.6z"]),
            &:has(path[d="M2.7 1a.7.7 0 0 0-.7.7v12.6a.7.7 0 0 0 .7.7h2.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7zm8 0a.7.7 0 0 0-.7.7v12.6a.7.7 0 0 0 .7.7h2.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7z"]) {
                background-image: var(--pause);

                &:disabled {
                    background-image: var(--pause-disabled) !important;
                }

                &:hover {
                    background-image: var(--pause-hover);
                }

                &:active {
                    background-image: var(--pause-pressed);
                }
            }
        }

        &[data-testid='control-button-skip-forward'] {
            width: 52px;
            height: 25px;
            margin-left: -1px;
            border-radius: 0;
            align-self: center;
            background: var(--next) no-repeat;
            transform: none !important;

            &:disabled {
                background-image: var(--next-disabled) !important;
            }

            &:hover {
                background-image: var(--next-hover);
            }

            &:active {
                background-image: var(--next-pressed);
            }

            &[data-fast-forward] {
                background-image: var(--fast-forward-pressed);
            }
        }
    }
}

.wmpotify-time-text-container {
    position: absolute;
    left: 0;
    bottom: 11px;
    width: calc((100vw - 438px) / 2);
    text-align: right;
    padding: 6px;
    font-size: 12px;
    pointer-events: none;
}

.wmpotify-time-text {
    pointer-events: auto;
}
/* ... */

